# uniview

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  dev_logs.md  mypy.ini  pyproject.toml  setup.py
container/: Dockerfile  Dockerfile.base  docker_build_base.sh  docker_build_uniview.sh  docker_run.sh
container/installers/: apt_install.sh  install_python.sh
dev_now/: coco_person_instance.py  dev_now.py
local_data/: mini_coco.json
studies/: coco_person_instance.py  dev_now.py
tests/: test_im2d_bbox.py  test_uniview.py
uniview/IM2D/: bbox.py  coco_person.py
uniview/dash/dev/: mot_metrics_eval.ipynb  tutorial_101.ipynb  tutorial_101.py  tutorial_102.ipynb  tutorial_102.py  tutorial_103.ipynb  tutorial_104.ipynb  tutorial_105.py  tutorial_106.py  tutorial_107.py  tutorial_108.py
uniview/dash/notes/: dash_notes.md
uniview/fiftyone/: README.md
uniview/fiftyone/examples/open_images_evaluation/error_analysis/: evaluation.py
uniview/fiftyone/examples/open_images_evaluation/error_analysis/inference/: tfhub.py
uniview/fiftyone/examples/open_images_evaluation/scripts/: evaluate_model.py  inference.py  load_data.py
uniview/im2d/: draw2d.py
uniview/vmo/: bbox.py  constants.py  keypoints.py  person_profile.py
