[tool.poetry]
name = "uniview"
version = "0.1.0"
description = "Datapoint Visualization and Illustration Toolkit"
authors = ["H-AI <dongjian413@gmail.com>"]
maintainers = ["H-AI <dongjian413@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = ["IICO",
            "Data",
            "Visualization",
            "Augmentation"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "uniview:main"